--- a/flex-alerts-new.yaml
+++ b/flex-alerts-new.yaml
@@ -13,7 +13,7 @@ spec:
         expr: sum(up{team="flex", app!="flex-sykepengesoknad-pdfgen"}) by (app) == 0
         for: 1m
         annotations:
-          consequence: "`\{{ $labels.app }}` er nede"
+          consequence: "`{{ $labels.app }}` er nede"
         labels:
           namespace: flex
           severity: critical
@@ -21,7 +21,7 @@ spec:
         expr: sum(increase(kube_pod_container_status_restarts_total{namespace="flex", container!="elector", container!="cloudsql-proxy", container!="linkerd-proxy"}[30m])) by (container, pod) > 2
         for: 1m
         annotations:
-          consequence: "`\{{ $labels.pod }}` sin container `\{{ $labels.container }}` har restartet mye"
+          consequence: "`{{ $labels.pod }}` sin container `{{ $labels.container }}` har restartet mye"
         labels:
           namespace: flex
           severity: critical
@@ -29,7 +29,7 @@ spec:
         expr: count(kube_pod_container_status_ready{namespace="flex", container!="elector", container!="cloudsql-proxy", container!="linkerd-proxy"} == 0) by (container, pod) > 0
         for: 1m
         annotations:
-          consequence: "`\{{ $labels.pod }}` sin container `\{{ $labels.container }}` er ikke ready"
+          consequence: "`{{ $labels.pod }}` sin container `{{ $labels.container }}` er ikke ready"
         labels:
           namespace: flex
           severity: critical
@@ -37,7 +37,7 @@ spec:
         expr: count(up{team="flex"} offset 1h) by (app) unless count(up{team="flex"}) by (app)
         for: 5m
         annotations:
-          consequence: "`\{{ $labels.app }}` har sluttet å rapportere metrikker"
+          consequence: "`{{ $labels.app }}` har sluttet å rapportere metrikker"
         labels:
           namespace: flex
           severity: critical
@@ -45,7 +45,7 @@ spec:
         expr: ((sum(rate(logd_messages_total{log_team="flex",log_app!="elector",log_level="Error"}[5m])) by (log_app)) / (sum(rate(logd_messages_total{log_team="flex",log_app!="elector"}[5m])) by (log_app))) > 0.1
         for: 1m
         annotations:
-          consequence: "`\{{ $labels.log_app }}` 1 av 10 loggmeldinger er error"
+          consequence: "`{{ $labels.log_app }}` 1 av 10 loggmeldinger er error"
         labels:
           namespace: flex
           severity: warning
@@ -53,7 +53,7 @@ spec:
         expr: (sum(rate(container_cpu_usage_seconds_total{namespace="flex",container!="linkerd-proxy",container!="cloudsql-proxy",container!="POD",container!=""}[5m])) by (pod) / sum(kube_pod_container_resource_limits{namespace="flex",resource="cpu", container!="linkerd-proxy",container!="cloudsql-proxy"}) by (pod)) > 0.90
         for: 1m
         annotations:
-          consequence: "`\{{ $labels.pod }}` bruker mer enn 90% cpu"
+          consequence: "`{{ $labels.pod }}` bruker mer enn 90% cpu"
         labels:
           namespace: flex
           severity: warning
@@ -61,7 +61,7 @@ spec:
         expr: sum(kube_pod_container_resource_requests{namespace="flex", resource="memory", container!="linkerd-proxy",container!="cloudsql-proxy"}) by (pod) - sum(container_memory_working_set_bytes{namespace="flex",container!="linkerd-init",container!="linkerd-proxy",container!="cloudsql-proxy",container!="POD", container!=""}) by (pod) < 0
         for: 1m
         annotations:
-          consequence: "`\{{ $labels.pod }}` bruker mer ram enn den har requestet"
+          consequence: "`{{ $labels.pod }}` bruker mer ram enn den har requestet"
         labels:
           namespace: flex
           severity: warning
