Alert for 4xx og 5xx responser

--- a/flex-alerts.yaml
+++ b/flex-alerts.yaml
@@ -65,3 +65,19 @@ spec:
         labels:
           namespace: flex
           severity: warning
+      - alert: flex-http-4xx
+        expr: (sum(rate(response_total{namespace="flex", app!="flex-sykepengesoknad-pdfgen", status_code=~"^4\\d\\d"}[3m])) by (app) / sum(rate(response_total{namespace="flex", status_code=~"^2\\d\\d"}[3m])) by (app)) > 0.01
+        for: 1m
+        annotations:
+          consequence: "`{{ $labels.app }}` har mange HTTP 4xx-feilresponser"
+        labels:
+          namespace: flex
+          severity: warning
+      - alert: flex-http-5xx
+        expr: (sum(rate(response_total{namespace="flex", status_code=~"^5\\d\\d"}[3m])) by (app) / sum(rate(response_total{namespace="flex", status_code=~"^2\\d\\d"}[3m])) by (app)) > 0.01
+        for: 1m
+        annotations:
+          consequence: "`{{ $labels.app }}` har mange HTTP 5xx-feilresponser"
+        labels:
+          namespace: flex
+          severity: critical
