--- a/flex-alerts.yaml
+++ b/flex-alerts.yaml
@@ -58,7 +58,7 @@ spec:
           namespace: flex
           severity: warning
       - alert: flex-app-ram
-        expr: sum(kube_pod_container_resource_requests{namespace="flex", resource="memory", container!="linkerd-proxy",container!="cloudsql-proxy"}) by (pod) - sum(container_memory_working_set_bytes{namespace="flex",container!="linkerd-init",container!="linkerd-proxy",container!="cloudsql-proxy",container!="POD", container!=""}) by (pod) < 0
+        expr: (sum(kube_pod_container_resource_requests{namespace="flex", resource="memory",container!="linkerd-init",container!="linkerd-proxy",container!="cloudsql-proxy",container!="elector",container!="POD",container!=""}) by (pod) - sum(container_memory_working_set_bytes{namespace="flex",container!="linkerd-init",container!="linkerd-proxy",container!="cloudsql-proxy",container!="elector",container!="POD", container!=""}) by (pod)) < 0
         for: 3m
         annotations:
           consequence: "`{{ $labels.pod }}` bruker mer ram enn den har requestet"
