Ny metrikk for telling av loggmeldinger

--- a/flex-alerts.yaml
+++ b/flex-alerts.yaml
@@ -42,10 +42,10 @@ spec:
           namespace: flex
           severity: critical
       - alert: flex-error-logging
-        expr: ((sum(rate(logd_messages_total{log_team="flex",log_app!="elector",log_level="Error"}[5m])) by (log_app)) / (sum(rate(logd_messages_total{log_team="flex",log_app!="elector"}[5m])) by (log_app))) > 0.1
+        expr: (sum(rate(log_messages_errors{namespace="flex", app!="cloudsql-proxy", app!="elector", app!="linkerd-proxy", app!="wonderwall", app!="linkerd-init"}[1m])) by (app) / sum(rate(log_messages_total{namespace="flex", app!="cloudsql-proxy", app!="elector", app!="linkerd-proxy", app!="wonderwall", app!="linkerd-init"}[1m])) by (app)) > 0.1
         for: 3m
         annotations:
-          consequence: "`{{ $labels.log_app }}` 1 av 10 loggmeldinger er error"
+          consequence: "`{{ $labels.app }}` 1 av 10 loggmeldinger er error"
         labels:
           namespace: flex
           severity: warning
