--- a/flex-alerts.yaml
+++ b/flex-alerts.yaml
@@ -57,15 +57,7 @@ spec:
         labels:
           namespace: flex
           severity: warning
-      - alert: flex-app-ram-limit
-        expr: (sum(container_memory_working_set_bytes{namespace="flex",container!="linkerd-init",container!="linkerd-proxy",container!="cloudsql-proxy",container!="elector",container!="wonderwall",container!="POD", container!=""}) by (pod) / sum(kube_pod_container_resource_limits{namespace="flex", resource="memory",container!="linkerd-init",container!="linkerd-proxy",container!="cloudsql-proxy",container!="elector",container!="wonderwall",container!="POD",container!=""}) by (pod)) > 0.95
-        for: 3m
-        annotations:
-          consequence: "`{{ $labels.pod }}` bruker mer enn 95% av minne limit"
-        labels:
-          namespace: flex
-          severity: warning
-      - alert: flex-spring-http-4xx
+:qç      - alert: flex-spring-http-4xx
         expr: (sum(rate(http_server_requests_seconds_count{namespace="flex", status=~"^4\\d\\d", uri!="/internal/health/**", uri!="/internal/health", uri!="/internal/prometheus"}[10m])) by (app,uri) / sum(rate(http_server_requests_seconds_count{namespace="flex", status=~"^2\\d\\d", uri!="/internal/health/**", uri!="/internal/health", uri!="/internal/prometheus"}[10m])) by (app,uri)) > 0.1
         for: 3m
         annotations:
