Fiks typo for å slette alert

--- a/flex-alerts.yaml
+++ b/flex-alerts.yaml
@@ -57,7 +57,7 @@ spec:
         labels:
           namespace: flex
           severity: warning
-:qç      - alert: flex-spring-http-4xx
+      - alert: flex-spring-http-4xx
         expr: (sum(rate(http_server_requests_seconds_count{namespace="flex", status=~"^4\\d\\d", uri!="/internal/health/**", uri!="/internal/health", uri!="/internal/prometheus"}[10m])) by (app,uri) / sum(rate(http_server_requests_seconds_count{namespace="flex", status=~"^2\\d\\d", uri!="/internal/health/**", uri!="/internal/health", uri!="/internal/prometheus"}[10m])) by (app,uri)) > 0.1
         for: 3m
         annotations:
